tests/run/error_missing_method.out
tests/run/error_missing_method.em:3:1: error: struct is missing a method required by an interface it implements
